[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "nrg_parser"
version = "0.1.0"
authors = ["David Carlson <drc@nrgsystems.com>"]
description = "IEA task 43 parsers for NRG Systems, Inc. SymphoniePRO loggers"
readme = "README.md"
requires-python = ">=3.10"
packages = [
   {include = "common", from = "src"},
   {include = "parser", from = "src"},
]
license = "MIT"
keywords = ["wind-energy", "iea-task-43", "nrg-systems", "symphonie", "symphoniepro"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[tool.poetry.dependencies]
numpy = "^1.23.4"
pandas = "^1.5.1"
python-dateutil = "^2.8.2"
nrgpy = "^1.8.4"
pyarrow = "^10.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pylint = "^2.14.0"
toml = "^0.10.2"
sphinx = "^"
ruff = "^"
jupyterlab = "^"

[tool.poetry.group.test.dependencies]
pytest = "^"

[project.urls]
"Homepage" = "https://github.com/nrgpy/nrg-parser"
"Bug Tracker" = "https://github.com/nrgpy/nrg-parser/issues"