[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "nrg-parser"
version = "0.1.0"
authors = ["David Carlson <drc@nrgsystems.com>"]
description = "IEA task 43 parsers for NRG Systems, Inc. SymphoniePRO loggers"
readme = "README.md"
packages = [
   {include = "common", from = "src"},
   {include = "nrg_parser", from = "src"},
]
license = "MIT"
keywords = ["wind-energy", "iea-task-43", "nrg-systems", "symphonie", "symphoniepro"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
pandas = "^1.5.1"
python-dateutil = "^2.8.2"
nrgpy = "^1.8.4"
pyarrow = "^10.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pylint = "^2.14.0"
toml = "^0.10.2"
sphinx = "^7.0.1"
ruff = "^0.0.275"
jupyterlab = "^4.0.2"
mkdocstrings-python = "^1.1.2"
markdown-exec = "^1.6.0"
mkdocs-material = "^9.1.18"
mkdocs-nav-enhancements = "^0.9.1"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
