[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "nrg-parser"
version = "0.2.1"
authors = [
    {name = "David Carlson", email = "drc@nrgsystems.com"},
]
maintainers = [
    {name = "Alexandra Arntsen", email = "aea@nrgsystems.com"},
    {name = "David Carlson", email = "drc@nrgsystems.com"},
]
description = "IEA task 43 parsers for NRG Systems, Inc. SymphoniePRO loggers"
readme = "README.md"
keywords = ["wind-energy", "iea-task-43", "nrg-systems", "symphonie", "symphoniepro"]
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "nrgpy",
    "python-dateutil",
    "pyarrow",
]

[project.urls]
Repository = "https://bitbucket.org/nrgsystems/logr_testing"

[project.optional-dependencies]
test = [
    'pytest',
]

dev = [
    'black',
    'jupyterlab',
    'mypy',
    'pandas-stubs',
    'ruff',
    'types-beautifulsoup4',
    'types-openpyxl',
    'types-requests',
    'types-toml',
]

docs = [
    'markdown-exec',
    'mkdocs',
    'mkdocs-autorefs',
    'mkdocs-gen-files',
    'mkdocs-literate-nav',
    'mkdocs-material',
    'mkdocstrings[python]',
]

[tool.black]
include = [
    "src",
    "tests",
]
exclude = ["__pycache__/"]

[tool.mypy]
exclude = ["build/"]

[tool.mypy.nrgpy]
ignore_missing_imports = true

[tool.mypy.pandas]
ignore_missing_imports = true
